--- a/thrift-limit/.env.example
+++ b/thrift-limit/.env.example
@@ -6,3 +6,5 @@ DB_NAME=postgres
 SHOW_SQL=false
 FORMAT_SQL=false
 BANK_PORT=8080
+TRANSACTION_URL=http://localhost:8080
+CURRENCYAPI_URL=http://localhost:8080
