--- a/thrift-bank/build.gradle
+++ b/thrift-bank/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -29,6 +30,8 @@ dependencies {
     runtimeOnly 'org.flywaydb:flyway-database-postgresql:10.18.2'
 
     runtimeOnly 'org.postgresql:postgresql'
+
+    implementation 'io.lettuce:lettuce-core:6.5.2.RELEASE'
 
     compileOnly 'org.projectlombok:lombok:1.18.34'
     testCompileOnly 'org.projectlombok:lombok:1.18.34'
