--- a/thrift-bank/src/main/resources/application.yaml
+++ b/thrift-bank/src/main/resources/application.yaml
@@ -19,5 +19,10 @@ spring:
       hibernate:
         format_sql: ${FORMAT_SQL:false}
 
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+
 server:
   port: ${BANK_PORT:8080}
