--- a/deployment/.env.example
+++ b/deployment/.env.example
@@ -9,5 +9,5 @@ DB_LIMIT_PORT=5432
 REDIS_PORT=6379
 BANK_PORT=8081
 LIMIT_PORT=8080
-TRANSACTION_URL=
-CURRENCYAPI_URL=
+TRANSACTION_URL=http://localhost:8081/api/v1/transactions
+CURRENCYAPI_URL=https://api.currencyapi.com/
