Handle limit amount exception

--- a/thrift-limit/src/main/resources/application.yaml
+++ b/thrift-limit/src/main/resources/application.yaml
@@ -19,6 +19,9 @@ spring:
       hibernate:
         format_sql: ${FORMAT_SQL:false}
 
+springdoc:
+  override-with-generic-response: false
+
 server:
   port: ${LIMIT_PORT:8080}
 
